--- a/client/index.html
+++ b/client/index.html
@@ -4,22 +4,7 @@
     <title>Project Atelier</title>
   </head>
   <body>
-    <header>
-      <div class="navbar">
-        <div class="brand-logo">
-          <span class="logo-atelier"></span>
-        </div>
-        <div class="search">
-          <form action="#">
-            <input type="text">
-            <button type="submit" class="search-button">
-                <img src="./style/img/search.png">
-            </button>
-          </form>
-        </div>
-      </div>
-    </header>
-    <div id="app"></div>
+    <div id="app">react is not running</div>
+    <script src="../dist/bundle.js"></script>
   </body>
-  <script src="./dist/bundle.js"></script>
 </html>
