--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <div id="app">react is not running</div>
-    <script src="../dist/bundle.js"></script>
+    <script src="./dist/bundle.js"></script>
   </body>
 </html>
